--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "grommet": "^2.27.0",
     "grommet-icons": "^4.8.0",
-    "jokesmodule": "^1.0.1",
+    "jokesmodule": "file:../jokes",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
